WIP: New simple Graphics subsystem support and start with OpenGL and D3D11.

--- a/Source/Alimer/config.h.in
+++ b/Source/Alimer/config.h.in
@@ -38,9 +38,10 @@
 #cmakedefine ALIMER_PLUGINS
 
 /* Graphics */
-#cmakedefine ALIMER_VULKAN
-#cmakedefine ALIMER_D3D12
 #cmakedefine ALIMER_D3D11
+#cmakedefine ALIMER_D3D12
+#cmakedefine ALIMER_VULKAN
+#cmakedefine ALIMER_OPENGL
 
 /* Audio */
 #cmakedefine ALIMER_ENABLE_AUDIO
