--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,15 @@ option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 
 # Graphics module backend
 if (WIN32)
-    option(ALIMER_D3D12 "Include Direct3D12 backend" ON)
-    option(ALIMER_VULKAN "Include Vulkan backend" ON)
+    option(ALIMER_OPENGL "Include OpenGL backend" ON)
+    option(ALIMER_D3D11 "Include Direct3D11 backend" ON)
+    #option(ALIMER_D3D12 "Include Direct3D12 backend" ON)
+    #option(ALIMER_VULKAN "Include Vulkan backend" ON)
 elseif (WINDOWS_STORE)
-    set(ALIMER_D3D12 ON CACHE BOOL "Use Direct3D12 backend")
+    set(ALIMER_D3D11 ON CACHE BOOL "Use Direct3D11 backend")
 else ()
-    set(ALIMER_VULKAN ON CACHE BOOL "Use Vulkan backend")
+    set(ALIMER_OPENGL ON CACHE BOOL "Use OpenGL backend")
+    #set(ALIMER_VULKAN ON CACHE BOOL "Use Vulkan backend")
 endif ()
 
 if (ANDROID OR IOS OR EMSCRIPTEN)
@@ -93,6 +96,12 @@ if (ALIMER_BUILD_SHARED)
 else ()
     message(STATUS "  Library         STATIC")
 endif ()
+if (ALIMER_D3D11)
+    message (STATUS "  Renderer:       Direct3D11")
+endif()
+if (ALIMER_OPENGL)
+    message (STATUS "  Renderer:       OpenGL")
+endif()
 if (ALIMER_D3D12)
     message (STATUS "  Renderer:       Direct3D12")
 endif()
