--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,14 @@ option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 
 # Graphics module backend
 if (WIN32)
-    option(ALIMER_GPU_D3D12 "Include Direct3D12 GPU backend" ON)
-    option(ALIMER_GPU_VULKAN "Include Vulkan GPU backend" ON)
+  option(ALIMER_GPU_D3D11 "Include Direct3D11 GPU backend" ON)
+  option(ALIMER_GPU_D3D12 "Include Direct3D12 GPU backend" ON)
+  option(ALIMER_GPU_VULKAN "Include Vulkan GPU backend" ON)
 elseif (WINDOWS_STORE)
-    set(ALIMER_GPU_D3D12 ON CACHE BOOL "Use Direct3D11 backend")
+  set(ALIMER_GPU_D3D11 ON CACHE BOOL "Use Direct3D11 backend")
+  option(ALIMER_GPU_D3D12 "Include Direct3D12 GPU backend" ON)
 else ()
-    set(ALIMER_GPU_VULKAN ON CACHE BOOL "Use Vulkan backend")
+  set(ALIMER_GPU_VULKAN ON CACHE BOOL "Use Vulkan backend")
 endif ()
 
 if (ANDROID OR IOS OR EMSCRIPTEN)
@@ -88,11 +90,14 @@ if (ALIMER_BUILD_SHARED)
 else ()
     message(STATUS "  Library         STATIC")
 endif ()
+if (ALIMER_GPU_D3D11)
+  message (STATUS "  Renderer:       Direct3D11")
+endif()
 if (ALIMER_GPU_D3D12)
-    message (STATUS "  Renderer:       Direct3D12")
+  message (STATUS "  Renderer:       Direct3D12")
 endif()
 if (ALIMER_GPU_VULKAN)
-    message (STATUS "  Renderer:       Vulkan")
+  message (STATUS "  Renderer:       Vulkan")
 endif()
 
 # Install files
