--- a/Source/Alimer/config.h.in
+++ b/Source/Alimer/config.h.in
@@ -38,10 +38,9 @@
 #cmakedefine ALIMER_PLUGINS
 
 /* Graphics */
-#cmakedefine ALIMER_D3D11
-#cmakedefine ALIMER_D3D12
-#cmakedefine ALIMER_VULKAN
-#cmakedefine ALIMER_OPENGL
+#cmakedefine ALIMER_GPU_D3D11
+#cmakedefine ALIMER_GPU_D3D12
+#cmakedefine ALIMER_GPU_VULKAN
 
 /* Audio */
 #cmakedefine ALIMER_ENABLE_AUDIO
