--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,15 +21,16 @@ option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 
 # Graphics module backend
 if (WIN32)
-  option(ALIMER_GPU_D3D11 "Include Direct3D11 GPU backend" ON)
-  option(ALIMER_GPU_D3D12 "Include Direct3D12 GPU backend" ON)
-  option(ALIMER_GPU_VULKAN "Include Vulkan GPU backend" ON)
+  set(ALIMER_GRAPHICS_API D3D11 CACHE STRING  "Select Graphics API [D3D12 | D3D11 | Vulkan]") 
+	set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS D3D12 D3D11 Vulkan)
 elseif (WINDOWS_STORE)
-  set(ALIMER_GPU_D3D11 ON CACHE BOOL "Use Direct3D11 backend")
-  option(ALIMER_GPU_D3D12 "Include Direct3D12 GPU backend" ON)
+  set(ALIMER_GRAPHICS_API D3D11 CACHE STRING  "Select Graphics API [D3D12 | D3D11]") 
+	set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS D3D12 D3D11)
 else ()
-  set(ALIMER_GPU_VULKAN ON CACHE BOOL "Use Vulkan backend")
+  set(ALIMER_GRAPHICS_API Vulkan CACHE STRING "Use Vulkan Graphics API" FORCE)
 endif ()
+string(TOUPPER "${ALIMER_GRAPHICS_API}" ALIMER_GRAPHICS_API_UPPER)
+set (ALIMER_${ALIMER_GRAPHICS_API_UPPER} ON)
 
 if (ANDROID OR IOS OR EMSCRIPTEN)
     set(ALIMER_BUILD_TOOLS OFF CACHE INTERNAL "Disable tools" FORCE)
@@ -90,15 +91,7 @@ if (ALIMER_BUILD_SHARED)
 else ()
     message(STATUS "  Library         STATIC")
 endif ()
-if (ALIMER_GPU_D3D11)
-  message (STATUS "  Renderer:       Direct3D11")
-endif()
-if (ALIMER_GPU_D3D12)
-  message (STATUS "  Renderer:       Direct3D12")
-endif()
-if (ALIMER_GPU_VULKAN)
-  message (STATUS "  Renderer:       Vulkan")
-endif()
+message (STATUS "  Graphics API:   ${ALIMER_GRAPHICS_API} (ALIMER_${ALIMER_GRAPHICS_API_UPPER})")
 
 # Install files
 # README.md and license
