ThirdParty: Add DirectXMath from github and engine integration.

--- a/Source/Alimer/CMakeLists.txt
+++ b/Source/Alimer/CMakeLists.txt
@@ -33,6 +33,7 @@ macro(group_sources)
 endmacro()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+set(SOURCE_FILES Alimer.natvis)
 
 define_engine_source_files(
     Core
@@ -79,6 +80,7 @@ target_include_directories(${TARGET_NAME} PUBLIC
 target_link_libraries(${TARGET_NAME} PUBLIC
   EASTL
   stb
+  DirectXMath
   fmt
   imgui
 )
