Better simple graphics API with D3D12 support. Remove DirectXMath.

--- a/Source/Alimer/CMakeLists.txt
+++ b/Source/Alimer/CMakeLists.txt
@@ -53,18 +53,11 @@ if (WIN32)
 endif ()
 
 # Graphics modules
-if (ALIMER_D3D11)
-  define_engine_source_files(Graphics/D3D)
-  define_engine_source_files(Graphics/D3D11)
-endif()
-
 if (ALIMER_D3D12)
   define_engine_source_files(Graphics/D3D)
   define_engine_source_files(Graphics/D3D12)
-endif()
-
-if (ALIMER_VULKAN)
-  #define_engine_source_files(Graphics/Vulkan)
+elseif (ALIMER_VULKAN)
+  define_engine_source_files(Graphics/Vulkan)
 endif()
 
 group_sources()
@@ -85,7 +78,6 @@ target_include_directories(${TARGET_NAME} PUBLIC
 target_link_libraries(${TARGET_NAME} PUBLIC
   EASTL
   stb
-  DirectXMath
   fmt
   imgui
 )
@@ -104,15 +96,9 @@ else()
     endif()
 endif()
 
-if (ALIMER_D3D11)
-  target_link_libraries(${TARGET_NAME} PRIVATE d3d11 dxgi)
-endif()
-
 if (ALIMER_D3D12)
-  target_link_libraries(${TARGET_NAME} PRIVATE dxgi)
-endif()
-
-if (ALIMER_VULKAN)
+  target_link_libraries(${TARGET_NAME} PRIVATE d3d12 dxgi dxguid)
+elseif (ALIMER_VULKAN)
   target_link_libraries(${TARGET_NAME} PRIVATE volk vma)
 endif()
 
