Improvements in graphics API.

--- a/Source/Alimer/CMakeLists.txt
+++ b/Source/Alimer/CMakeLists.txt
@@ -53,11 +53,18 @@ if (WIN32)
 endif ()
 
 # Graphics modules
+if (ALIMER_D3D11)
+  define_engine_source_files(Graphics/D3D)
+  define_engine_source_files(Graphics/D3D11)
+endif()
+
 if (ALIMER_D3D12)
   define_engine_source_files(Graphics/D3D)
   define_engine_source_files(Graphics/D3D12)
-elseif (ALIMER_VULKAN)
-  define_engine_source_files(Graphics/Vulkan)
+endif()
+
+if (ALIMER_VULKAN)
+  #define_engine_source_files(Graphics/Vulkan)
 endif()
 
 group_sources()
@@ -96,9 +103,7 @@ else()
     endif()
 endif()
 
-if (ALIMER_D3D12)
-  target_link_libraries(${TARGET_NAME} PRIVATE d3d12 dxgi dxguid)
-elseif (ALIMER_VULKAN)
+if (ALIMER_VULKAN)
   target_link_libraries(${TARGET_NAME} PRIVATE volk vma)
 endif()
 
