--- a/Source/Alimer/config.h.in
+++ b/Source/Alimer/config.h.in
@@ -37,6 +37,10 @@
 #cmakedefine ALIMER_NETWORK
 #cmakedefine ALIMER_PLUGINS
 
+/* Platform library */
+#cmakedefine ALIMER_GLFW
+#cmakedefine ALIMER_SDL
+
 /* Graphics */
 #cmakedefine ALIMER_D3D11
 #cmakedefine ALIMER_D3D12
