--- a/Source/New/config.h.in
+++ b/Source/New/config.h.in
@@ -20,21 +20,16 @@
 // THE SOFTWARE.
 //
 
-#include "core/Application.h"
-#include "platform/Window.h"
+#pragma once
 
-namespace Alimer
-{
-    class TestApp : public Application
-    {
-    public:
-    };
+#include "core/preprocessor.h"
 
-    std::unique_ptr<Application> Application::Create(const std::vector<std::string>& args)
-    {
-        Window* window = new Window("Alimer", 0, 0, 640, 480);
-
-        return std::make_unique<TestApp>();
-    }
-}
-
+#if defined(ALIMER_SHARED_LIBRARY)
+#   if defined(ALIMER_COMPILE)
+#       define ALIMER_API ALIMER_DLL_EXPORT
+#   else
+#       define ALIMER_API ALIMER_DLL_IMPORT
+#   endif
+#else
+#   define ALIMER_API
+#endif  // defined(ALIMER_SHARED_LIBRARY)
