More logic cleanup and initial UWP support (using WinRT).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ cmake_minimum_required(VERSION 3.10)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Project declaration
 project (
@@ -20,23 +19,34 @@ option(ALIMER_BUILD_SHARED "Build as a shared library" OFF)
 option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 
 # Graphics module backend
-if (WIN32)
+if(EMSCRIPTEN)
+  set(ALIMER_NATIVE_PLATFORM "Web")
+  set(ALIMER_OPENGL ON CACHE BOOL "Enable OpenGL GPU backend")
+elseif(ANDROID)  
+  set(ALIMER_NATIVE_PLATFORM "Android")
+  set(ALIMER_OPENGL ON CACHE BOOL "Enable OpenGL GPU backend")
+elseif(APPLE)
+  set(ALIMER_NATIVE_PLATFORM "Apple")
+  set(ALIMER_METAL ON CACHE BOOL "Enable Metal GPU backend")
+elseif(WINDOWS_STORE)
+  set(ALIMER_NATIVE_PLATFORM "UWP")
+  option(ALIMER_D3D11 "Enable Direct3D11 backend" ON)
+  option(ALIMER_D3D12 "Enable Direct3D12 backend" ON)
+elseif(WIN32)
+  set(ALIMER_NATIVE_PLATFORM "Win32")
   option(ALIMER_D3D11 "Include Direct3D11 backend" ON)
   option(ALIMER_D3D12 "Include Direct3D12 backend" ON)
   option(ALIMER_VULKAN "Include Vulkan backend" ON)
-  
-elseif (WINDOWS_STORE)
-  set(ALIMER_D3D11 ON CACHE BOOL "Use Direct3D12 backend")
-  set(ALIMER_D3D12 ON CACHE BOOL "Use Direct3D12 backend")
-else ()
-  set(ALIMER_VULKAN ON CACHE BOOL "Use Vulkan backend")
-endif ()
+elseif(UNIX)
+  set(ALIMER_NATIVE_PLATFORM "Unix") 
+else()
+  message(FATAL_ERROR "Unrecognized platform: ${CMAKE_SYSTEM_NAME}")
+endif()
 
-if (ANDROID OR IOS OR EMSCRIPTEN)
+if (ANDROID OR IOS OR EMSCRIPTEN OR WINDOWS_STORE)
     set(ALIMER_BUILD_TOOLS OFF CACHE INTERNAL "Disable tools" FORCE)
     set(ALIMER_BUILD_EDITOR OFF CACHE INTERNAL "Disable editor" FORCE)
 else ()
-    
     option(ALIMER_BUILD_TOOLS "Build tools" ON)
     option(ALIMER_BUILD_EDITOR "Build Editor" ON)
 endif ()
