New simplified Application and Platform logic, hide the Window logic from user and manage from platform side (Currently works on Win32 and UWP).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ elseif(APPLE)
   set(ALIMER_NATIVE_PLATFORM "Apple")
 elseif(WINDOWS_STORE)
   set(ALIMER_NATIVE_PLATFORM "UWP")
+  set(ALIMER_UWP_VERSION_MIN  "10.0.18362.0")
 elseif(WIN32)
   set(ALIMER_NATIVE_PLATFORM "Win32")
 elseif(UNIX)
