Platform refactoring and cleanup.

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -39,14 +39,9 @@ endmacro()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
-set(SOURCE_FILES
-    application.cpp
-    application.h
-    platform/platform.h
-)
-
 define_engine_source_files(
     core
+    platform
     math
     resource
     graphics
