--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ else ()
 endif ()
 
 # Default values for the backend-enabling options
+set(ENABLE_D3D12 OFF)
 set(ENABLE_D3D11 OFF)
 set(ENABLE_METAL OFF)
 set(ENABLE_OPENGL OFF)
@@ -89,8 +90,10 @@ elseif(ANDROID)
     set(ENABLE_OPENGL ON)
     set(ENABLE_VULKAN ON)
 elseif(WINDOWS_STORE)
+    set(ENABLE_D3D12 ON)
     set(ENABLE_D3D11 ON)
 elseif (WIN32)
+    set(ENABLE_D3D12 ON)
     set(ENABLE_D3D11 ON)
     set(ENABLE_VULKAN ON)
     set(ENABLE_OPENGL ON)
@@ -100,6 +103,7 @@ elseif(UNIX)
     set(ENABLE_OPENGL ON)
     set(ENABLE_VULKAN ON)
 endif()
+option(ALIMER_ENABLE_D3D12 "Enable compilation of the D3D12 backend" ${ENABLE_D3D12})
 option(ALIMER_ENABLE_D3D11 "Enable compilation of the D3D11 backend" ${ENABLE_D3D11})
 option(ALIMER_ENABLE_METAL "Enable compilation of the Metal backend" ${ENABLE_METAL})
 option(ALIMER_ENABLE_NULL "Enable compilation of the Null backend" ON)
