--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -81,8 +81,8 @@ target_include_directories(${TARGET_NAME} PUBLIC
 )
 
 target_link_libraries(${TARGET_NAME} PUBLIC
+    EASTL
     stb
-    fmt
     imgui
 )
 
