Graphics: Restoring Vulkan support and various graphics cleanup. Remove unused dependencies and old code.

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -62,7 +62,7 @@ if (ALIMER_ENABLE_D3D12)
 endif()
 
 if (ALIMER_ENABLE_VULKAN)
-    #define_engine_source_files(Graphics/Vulkan)
+    define_engine_source_files(Graphics/Vulkan)
 endif()
 
 group_sources()
