--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -56,13 +56,18 @@ if(NOT (WINDOWS_STORE OR EMSCRIPTEN OR ANDROID))
     define_engine_source_files(Platform/glfw)
 endif()
 
+if (ALIMER_ENABLE_D3D11)
+    define_engine_source_files(Graphics/D3D)
+    define_engine_source_files(Graphics/D3D11)
+endif()
+
 if (ALIMER_ENABLE_D3D12)
     define_engine_source_files(Graphics/D3D)
-    define_engine_source_files(Graphics/D3D12)
+    #define_engine_source_files(Graphics/D3D12)
 endif()
 
 if (ALIMER_ENABLE_VULKAN)
-    define_engine_source_files(Graphics/Vulkan)
+    #define_engine_source_files(Graphics/Vulkan)
 endif()
 
 group_sources()
